syntax = "proto3";

package rivet.backend.servers;

import "google/protobuf/struct.proto";
import "proto/common.proto";

message Server {
    rivet.common.Uuid cluster_id = 1;
    rivet.common.Uuid datacenter_id = 2;
    int32 kill_timeout = 3;
    map<string, MetadataJson> metadata = 4;
    Runtime runtime = 5;
}

message MetadataJson {
    string value = 1;
}

message Runtime {
    optional DockerRuntime docker = 1;
}

message DockerRuntime {
    repeated string args = 1;
    map<string, string> environment = 2;
    string image_id = 3;
    DockerNetwork network = 4;
}

message DockerNetwork {
    DockerNetworkMode mode = 1;
    map<string, DockerPort> ports = 2;
}

enum DockerNetworkMode {
    HOST = 0;
    BRIDGE = 1;
}

message DockerPort {
    optional int32 port = 1;
    DockerPortRouting routing = 2;
}

message DockerPortRouting {
    optional GameGuardProtocol game_guard = 1;
    optional DockerHostRouting host = 2;
}

enum GameGuardProtocol {
    HTTP = 0;
    HTTPS = 1;
    TCP = 2;
    TCP_TLS = 3;
    UDP = 4;
}

message DockerHostRouting {
    google.protobuf.Value null = 1;
}